--- a/app/src/main/res/layout/fragment_singleplayer.xml
+++ b/app/src/main/res/layout/fragment_singleplayer.xml
@@ -8,14 +8,13 @@
 
     <LinearLayout
         android:id="@+id/scoreLayout"
-        android:layout_width="195dp"
-        android:layout_height="91dp"
-        android:layout_marginTop="26dp"
-        android:layout_marginEnd="216dp"
-        android:layout_marginBottom="103dp"
-        android:background="@drawable/score"
-        app:layout_constraintBottom_toTopOf="@+id/firstLayout"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="190dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="95dp"
+        android:background="@drawable/scoreicon"
+        app:layout_constraintEnd_toStartOf="@+id/jokerLayout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -23,58 +22,85 @@
             android:id="@+id/scoreValue"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:fontFamily="sans-serif-light"
+            android:fontFamily="@font/bold"
             android:gravity="center"
-            android:paddingLeft="80dp"
+            android:paddingLeft="70dp"
             android:paddingRight="5dp"
-            android:paddingBottom="10dp"
+            android:paddingBottom="2dp"
             android:text="100"
             android:textAlignment="center"
-            android:textColor="#000000"
-            android:textSize="22sp" />
+            android:textColor="#454545"
+            android:textSize="21sp"
+            android:visibility="visible" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/jokerLayout"
+        android:layout_width="125dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="95dp"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/jokericon"
+        app:layout_constraintStart_toEndOf="@+id/scoreLayout"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/jokerValue"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fontFamily="@font/bold"
+            android:gravity="center"
+            android:paddingLeft="45dp"
+            android:paddingBottom="10dp"
+            android:text="1"
+            android:textAlignment="center"
+            android:textColor="#454545"
+            android:textSize="21sp"
+            android:textStyle="bold"
+            android:visibility="visible" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/firstLayout"
         android:layout_width="340dp"
-        android:layout_height="85dp"
-        android:layout_marginStart="34dp"
-        android:layout_marginTop="258dp"
-        android:layout_marginEnd="37dp"
-        android:layout_marginBottom="12dp"
+        android:layout_height="130dp"
+
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="90dp"
+        android:layout_marginEnd="36dp"
+        android:layout_marginBottom="11dp"
         android:background="@drawable/buttonbg"
         android:gravity="center"
-
         android:onClick="clickedUp"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/secondLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/scoreLayout">
 
         <TextView
             android:id="@+id/firstWordValue"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:fontFamily="sans-serif-light"
+            android:fontFamily="@font/regular"
             android:gravity="center"
-            android:paddingBottom="20sp"
-            android:textColor="#000000"
-            android:textSize="22sp" />
+            android:paddingBottom="35dp"
+            android:textColor="#454545"
+            android:textSize="34sp"
+            android:visibility="visible" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/secondLayout"
         android:layout_width="340dp"
-        android:layout_height="85dp"
+        android:layout_height="130dp"
         android:layout_marginStart="35dp"
-        android:layout_marginTop="12dp"
         android:layout_marginEnd="36dp"
-        android:layout_marginBottom="356dp"
+        android:layout_marginBottom="70dp"
         android:background="@drawable/buttonbg"
         android:gravity="center"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/powerButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/firstLayout">
@@ -83,11 +109,13 @@
             android:id="@+id/secondWordValue"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:fontFamily="sans-serif-light"
+            android:fontFamily="@font/regular"
             android:gravity="center"
-            android:paddingBottom="20sp"
-            android:textColor="#000000"
-            android:textSize="22sp" />
+            android:paddingBottom="35dp"
+            android:textColor="#454545"
+            android:textSize="34sp"
+            android:visibility="visible" />
+
     </LinearLayout>
 
     <ImageButton
@@ -95,12 +123,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="154dp"
-        android:layout_marginTop="264dp"
+        android:layout_marginTop="25dp"
         android:layout_marginEnd="155dp"
+        android:layout_marginBottom="75dp"
         android:background="#00FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/secondLayout"
+        app:layout_constraintTop_toBottomOf="@+id/secondLayout"
         app:srcCompat="@drawable/passicon" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
