--- a/app/src/main/res/layout/fragment_scoreboard.xml
+++ b/app/src/main/res/layout/fragment_scoreboard.xml
@@ -1,16 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg">
 
-    <ListView
-        android:id="@+id/scoreListView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <ImageButton
+        android:id="@+id/textView2"
+        android:layout_width="350dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="15dp"
+
+        android:background="@drawable/scoreboardbuttonicon"
+        android:fontFamily="@font/bold"
+        android:gravity="center"
+        android:paddingBottom="20dp"
+        android:scaleType="fitCenter"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/scoreView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/scoreView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="15dp"
+        android:textAlignment="center"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
