--- a/app/src/main/res/layout/fragment_singleplayer.xml
+++ b/app/src/main/res/layout/fragment_singleplayer.xml
@@ -7,12 +7,12 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:id="@+id/scoreLayout"
+        android:id="@+id/optionLayout"
         android:layout_width="190dp"
         android:layout_height="70dp"
         android:layout_marginStart="5dp"
         android:layout_marginTop="15dp"
-        android:layout_marginEnd="95dp"
+        android:layout_marginEnd="65dp"
         android:background="@drawable/scoreicon"
         app:layout_constraintEnd_toStartOf="@+id/jokerLayout"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,10 +38,11 @@
         android:id="@+id/jokerLayout"
         android:layout_width="125dp"
         android:layout_height="70dp"
-        android:layout_marginStart="95dp"
         android:layout_marginTop="15dp"
+        android:layout_marginEnd="15dp"
         android:background="@drawable/jokericon"
-        app:layout_constraintStart_toEndOf="@+id/scoreLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/optionLayout"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
@@ -76,7 +77,7 @@
         app:layout_constraintBottom_toTopOf="@+id/secondLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scoreLayout">
+        app:layout_constraintTop_toBottomOf="@+id/optionLayout">
 
         <TextView
             android:id="@+id/firstWordValue"
