--- a/app/src/main/res/anim/shake.xml
+++ b/app/src/main/res/anim/shake.xml
@@ -1,10 +1,10 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android">
     <rotate
-        android:duration="700"
+        android:duration="1000"
         android:fromDegrees="-1"
         android:pivotX="50%"
         android:pivotY="50%"
-        android:repeatCount="infinite"
+        android:repeatCount="5"
         android:repeatMode="reverse"
         android:interpolator="@android:anim/linear_interpolator"
         android:toDegrees="1" />
