--- a/app/src/main/res/layout/fragment_singleplayer.xml
+++ b/app/src/main/res/layout/fragment_singleplayer.xml
@@ -2,9 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/bg"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/bg">
 
     <LinearLayout
         android:id="@+id/optionLayout"
@@ -67,7 +67,7 @@
         android:layout_height="130dp"
 
         android:layout_marginStart="35dp"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="100dp"
         android:layout_marginEnd="36dp"
         android:layout_marginBottom="11dp"
         android:background="@drawable/buttonbg"
@@ -97,7 +97,7 @@
         android:layout_height="130dp"
         android:layout_marginStart="35dp"
         android:layout_marginEnd="36dp"
-        android:layout_marginBottom="70dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/buttonbg"
         android:gravity="center"
         android:orientation="vertical"
@@ -119,6 +119,22 @@
 
     </LinearLayout>
 
+
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="25dp"
+        android:visibility="invisible"
+        app:adSize="SMART_BANNER"
+        app:adUnitId="ca-app-pub-4275218970636966/4595713066"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/powerButton"></com.google.android.gms.ads.AdView>
+
     <ImageButton
         android:id="@+id/powerButton"
         android:layout_width="wrap_content"
@@ -126,9 +142,10 @@
         android:layout_marginStart="154dp"
         android:layout_marginTop="25dp"
         android:layout_marginEnd="155dp"
-        android:layout_marginBottom="75dp"
+        android:layout_marginBottom="30dp"
         android:background="#00FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:scaleType="fitCenter"
+        app:layout_constraintBottom_toTopOf="@+id/adView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/secondLayout"
